--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@types/jwt-decode": "^3.1.0",
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
